# CAI_GOV_STUDIO_AGENT

./: .coveragerc  .gitignore  .project-metadata.yaml  README.md  alembic.ini  catalog-entry.yaml  cdsw-build.sh  eslint.config.mjs  next.config.js  next.config.ts  package-lock.json  package.json  pyproject.toml  setup.py  tailwind.config.js
NOTICES/: agent-studio-notice.txt
alembic/: env.py
alembic/versions/: 2025_02_06_0750_initial_migration.py  2025_03_06_0419_add_directory_field_to_workflows.py  cd7233eb94e6_initial_migration.py
app/: globals.css  layout.tsx  page.tsx
app/agents/: agentApi.ts  page.tsx
app/api/: apiSlice.ts
app/components/: AddToolModal.tsx  AgentCard.tsx  AgentForm.tsx  AgentList.tsx  ChatMessages.tsx  CommonBreadCrumb.tsx  ContentWithHealthCheck.tsx  CreateToolTemplateModal.tsx  DeleteDeployedWorkflowModal.tsx  DeleteWorkflowModal.tsx  ErrorBoundary.tsx  FeedbackContent.tsx  HomeView.tsx  MessageBoxes.tsx  ModelActionsDrawer.tsx  ModelList.tsx  NoDefaultModelModal.tsx  Notifications.tsx  OpsIFrame.tsx  SelectOrAddAgentModal.tsx  SelectOrAddManagerAgentModal.tsx  StoreProvider.tsx  StudioTopNav.tsx  ToolTemplateList.tsx  ToolViewOrEdit.tsx  TopNav.tsx  WarningMessageBox.tsx  WorkflowAddToolModal.tsx  WorkflowDataView.tsx  WorkflowDetails.tsx  WorkflowEditorAgentInputs.tsx  WorkflowEditorAgentView.tsx  WorkflowEditorConfigureInputs.tsx  WorkflowEditorConfigureView.tsx  WorkflowEditorTaskInputs.tsx  WorkflowEditorTaskView.tsx  WorkflowGetStartModal.tsx  WorkflowList.tsx  WorkflowListItem.tsx  WorkflowNavigation.tsx  (+5 more)
app/lib/: constants.ts  constants.tsx  crossCuttingApi.ts  fileDownload.ts  fileUpload.ts  globalSettingsSlice.ts  localStorage.ts  ops.ts  store.ts  types.ts  workbench.ts  workflow.ts
app/models/: modelsApi.ts  page.tsx
app/ops/: opsApi.ts  page.tsx
app/tasks/: tasksApi.ts
app/tools/: page.tsx  toolInstancesApi.ts  toolTemplatesApi.ts
app/utils/: defaultToolCode.ts
app/workflows/: deployedWorkflowsApi.ts  diagrams.ts  editorSlice.ts  page.tsx  workflowAppApi.ts  workflowAppSlice.ts  workflowsApi.ts
data/: project_defaults.json
docs/user_guide/: custom_workflow_application.md  models.md  monitoring.md  tools.md  workflows.md
examples/custom_application/: gradio_application.py  gradio_driver.py
sample_data/sales_enablement_use_case_stories/: deutsche-telekom-and-ultra-tendancy.txt  large-national-telecommunication-company.txt  service-management-group.txt  shoppermotion.txt  thomson-reuters.txt
startup_scripts/: ensure-uv-package-manager.py  install-dependencies.py  run-app.py  uv_initialize-project-defaults.py  uv_start-agent-ops-server.py
studio/: client.py  consts.py  ops.py  service.py
studio/agents/: __init__.py  agent.py  agent_templates.py  test_agents.py  utils.py
studio/api/: __init__.py  types.py
studio/cross_cutting/: global_thread_pool.py  input_types.py  methods.py  (+2 more)
studio/workflow_engine/: README.md  cdsw-build.sh  pyproject.toml
studio/workflow_engine/src/engine/: consts.py  ops.py  tracing.py  types.py  utils.py
studio/workflow_engine/src/engine/crewai/: agents.py  crew.py  llms.py  run.py  tools.py  tracing.py
studio/workflow_engine/src/engine/entry/: workbench.py
tests/: test_activated_tools.py  test_cross_cutting.py  test_models.py  test_tool_template.py  test_tools.py  test_validate_tool_code.py  test_validate_tool_template.py  test_workbench.py
(+73 files in other folders)
